force-app/main/default/objects/SVMXA360__CONF_ProcessStepParameter__c/SVMXA360__CONF_ProcessStepParameter__c.object-meta.xml
<CustomObject>
    <description>Process Step Parameter stores parameters configured for Wizard steps. The parameters are passed as input values to the Step when they are invoked in SPM Wizards.</description>
    <label>Process Step Parameter</label>
    <nameField>
        <displayFormat>PSP-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Step Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>