force-app/main/default/objects/SVMXA360__CONF_ProcessStepParameter__c/fields/SVMXA360__ParameterKey__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ParameterKey__c</fullName>
    <description>Parameter key of input parameters</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Parameter Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>