force-app/main/default/objects/SVMXA360__CONF_ProcessStepParameter__c/fields/SVMXA360__ParameterValue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ParameterValue__c</fullName>
    <description>Mapped value to set in the input parameters</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Parameter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>