force-app/main/default/objects/SVMXA360__CONF_ProcessStepParameter__c/fields/SVMXA360__ProcessWizardStepId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProcessWizardStepId__c</fullName>
    <description>Process Wizard Step ID for the input parameters.</description>
    <label>Process Wizard Step</label>
    <referenceTo>SVMXA360__CONF_ProcessWizardStep__c</referenceTo>
    <relationshipLabel>Process Step Parameters</relationshipLabel>
    <relationshipName>Process_Step_Parameters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>