force-app/main/default/objects/SVMXA360__CONF_ProcessStepParameter__c/fields/SVMXA360__ValueType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ValueType__c</fullName>
    <description>Type of Input Parameters. For example, Value, Field, or Function.</description>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Function</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>